# jwtoxide

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  Cargo.toml  Dockerfile  Makefile  NEWS.rst  README.md  README.rst  jwtoxide copy.pyi  jwtoxide.pyi  pyproject.toml
.github/workflows/: base.yml  build.yml  dependabot-push.yml  dependabot-towncrier.yml  on-pr.yml  release.yml  test-main.yml  test.yml  version.yml
changes/: dependabot_cargo_pyo3-0.24.1.misc.rst  dependabot_cargo_ring-0.17.14.misc  dependabot_cargo_ruzstd-0.7.3.misc.rst  dependabot_pip_docs_jinja2-3.1.6.misc  dependabot_pip_docs_webob-1.8.8.misc.rst  dependencies.misc  doc-requirements.misc  early_expiration.feature.rst  encoding.doc  hashbrown.bugfix  header.feature  idna.misc  pyo3-update.misc  testing-pr.misc  waitress-update.misc  windows.feature  workflow.misc
docs/: conf.py  index.rst  modules.rst  requirements.txt
example/: server.py
src/: claims.rs  decoding_key.rs  header.rs  keyring.rs  lib.rs  validation.rs
src/jwk/: mod.rs
tests/: test_decode.py  test_encode.py
