[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "jwtoxide"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
strip = true

[project.optional-dependencies]
test = ["pytest", "pyjwt>=2.0.0"]
docs = ["sphinx", "autodoc", "sphinx-rtd-theme"]
lint = ["ruff"]
